--- a/index.html
+++ b/index.html
@@ -146,6 +146,74 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   .hero{padding-top:120px}
   .cta .vip-btn{margin-left:0}
 }
+/* DIRECT HOOK */
+.direct-hook{
+  max-width:900px;
+  margin:140px auto 0;
+  padding:60px 40px;
+  text-align:center;
+  background:linear-gradient(180deg, rgba(20,40,60,.55), rgba(10,20,30,.85));
+  border-radius:28px;
+  border:1px solid rgba(255,255,255,.12);
+  backdrop-filter: blur(10px);
+}
+
+.direct-hook h2{
+  font-size:clamp(28px,5vw,46px);
+  font-weight:900;
+  margin-bottom:12px;
+}
+
+.direct-hook h3{
+  font-size:20px;
+  opacity:.85;
+  margin-bottom:24px;
+}
+
+.direct-hook p{
+  font-size:18px;
+  opacity:.9;
+  margin-bottom:24px;
+}
+
+.hook-steps{
+  display:flex;
+  justify-content:center;
+  gap:18px;
+  flex-wrap:wrap;
+  margin-bottom:30px;
+}
+
+.hook-steps span{
+  padding:10px 16px;
+  border-radius:14px;
+  background:rgba(255,255,255,.06);
+  font-size:15px;
+  opacity:.9;
+}
+
+.hook-solution{
+  font-size:18px;
+  margin-bottom:36px;
+}
+
+.primary-btn{
+  display:inline-block;
+  padding:16px 38px;
+  border-radius:40px;
+  font-size:18px;
+  font-weight:700;
+  background:linear-gradient(90deg,#ffffff,#cfd9ff);
+  color:#000;
+  text-decoration:none;
+  box-shadow:0 18px 40px rgba(0,0,0,.45);
+  transition:.3s ease;
+}
+
+.primary-btn:hover{
+  transform:translateY(-3px);
+  box-shadow:0 24px 60px rgba(0,0,0,.6);
+}
 </style>
 </head>
 
@@ -189,7 +257,32 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
     <img src="background.jpg" alt="ZenSite demo">
   </div>
 </section>
+<section class="direct-hook reveal">
+  <h2>La gente decide en 5 segundos</h2>
+  <h3>si confía en tu negocio… o se va.</h3>
 
+  <p>
+    No es falta de clientes.<br>
+    No es falta de anuncios.<br><br>
+    Es que tu web no transmite autoridad.
+  </p>
+
+  <div class="hook-steps">
+    <span>👀 Entran</span>
+    <span>⏱ Miran rápido</span>
+    <span>❌ Se van</span>
+  </div>
+
+  <p class="hook-solution">
+    ZenSite está diseñado para que el visitante
+    <strong>se quede</strong>, <strong>confíe</strong>
+    y <strong>te escriba</strong>.
+  </p>
+
+  <a href="#planes" class="primary-btn">
+    Ver cómo lo hacemos
+  </a>
+</section>
 <section class="system-z">
   <h2 class="reveal"
       data-es="ZenSite no es solo una web"
@@ -235,3 +328,4 @@ setLang('es');
 
 </body>
 </html>
+
