--- a/index.html
+++ b/index.html
@@ -258,29 +258,47 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </div>
 </section>
 <section class="direct-hook reveal">
-  <h2>La gente decide en 5 segundos</h2>
-  <h3>si confía en tu negocio… o se va.</h3>
+  <h2>Tu web está perdiendo clientes</h2>
+  <h3>y ni siquiera te das cuenta.</h3>
 
   <p>
-    No es falta de clientes.<br>
-    No es falta de anuncios.<br><br>
-    Es que tu web no transmite autoridad.
+    La mayoría de las personas no leen.<br>
+    No comparan.<br><br>
+    <strong>Juzgan.</strong>
   </p>
 
   <div class="hook-steps">
     <span>👀 Entran</span>
-    <span>⏱ Miran rápido</span>
-    <span>❌ Se van</span>
+    <span>🧠 Juzgan en segundos</span>
+    <span>❌ Se van con otro</span>
   </div>
 
   <p class="hook-solution">
-    ZenSite está diseñado para que el visitante
-    <strong>se quede</strong>, <strong>confíe</strong>
-    y <strong>te escriba</strong>.
+    Si tu web no transmite <strong>autoridad</strong>,
+    <strong>confianza</strong> y <strong>nivel</strong>
+    en los primeros segundos…<br>
+    <strong>ya perdiste.</strong>
   </p>
 
-  <a href="#planes" class="primary-btn">
-    Ver cómo lo hacemos
+  <p class="hook-solution">
+    ZenSite no está hecho para “verse bonito”.<br>
+    Está hecho para que el cliente
+    <strong>confíe</strong> y
+    <strong>te escriba sin dudar</strong>.
+  </p>
+
+  <p class="hook-contact">
+    💬 ¿Quieres saber si tu web está matando ventas?<br>
+    Escríbeme y te lo digo directo.<br>
+    <strong>Disponible 24/7.</strong>
+  </p>
+
+  <a 
+    href="https://wa.me/15024714725?text=Hola%2C%20quiero%20saber%20si%20mi%20web%20está%20perdiendo%20clientes"
+    class="primary-btn"
+    target="_blank"
+  >
+    Hablar ahora por WhatsApp
   </a>
 </section>
 <section class="system-z">
@@ -328,4 +346,5 @@ setLang('es');
 
 </body>
 </html>
+
 
