--- a/index.html
+++ b/index.html
@@ -258,47 +258,31 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </div>
 </section>
 <section class="direct-hook reveal">
-  <h2>Tu web está perdiendo clientes</h2>
-  <h3>y ni siquiera te das cuenta.</h3>
+  <h2>“Yo no necesito una web”</h2>
+  <h3>es lo que dicen… hasta que pierden ventas.</h3>
 
   <p>
-    La mayoría de las personas no leen.<br>
-    No comparan.<br><br>
-    <strong>Juzgan.</strong>
+    Si no tienes web, no es que estés ahorrando.<br>
+    Es que estás dejando dinero en la mesa.
   </p>
 
   <div class="hook-steps">
-    <span>👀 Entran</span>
-    <span>🧠 Juzgan en segundos</span>
-    <span>❌ Se van con otro</span>
+    <span>📱 Instagram</span>
+    <span>💬 WhatsApp</span>
+    <span>❌ Sin control</span>
   </div>
 
   <p class="hook-solution">
-    Si tu web no transmite <strong>autoridad</strong>,
-    <strong>confianza</strong> y <strong>nivel</strong>
-    en los primeros segundos…<br>
-    <strong>ya perdiste.</strong>
+    Sin una web, el cliente decide solo.<br>
+    Con ZenSite, <strong>tú controlas la primera impresión</strong>,
+    la confianza y el contacto.
   </p>
 
-  <p class="hook-solution">
-    ZenSite no está hecho para “verse bonito”.<br>
-    Está hecho para que el cliente
-    <strong>confíe</strong> y
-    <strong>te escriba sin dudar</strong>.
-  </p>
-
-  <p class="hook-contact">
-    💬 ¿Quieres saber si tu web está matando ventas?<br>
-    Escríbeme y te lo digo directo.<br>
-    <strong>Disponible 24/7.</strong>
-  </p>
-
-  <a 
-    href="https://wa.me/15024714725?text=Hola%2C%20quiero%20saber%20si%20mi%20web%20está%20perdiendo%20clientes"
-    class="primary-btn"
-    target="_blank"
-  >
-    Hablar ahora por WhatsApp
+  <a href="https://wa.me/15024714725" class="primary-btn">
+    📲 Contactar · Te explico si la necesitas
+    <small style="display:block;font-size:13px;opacity:.7;margin-top:4px">
+      Disponible 24/7 · Sin compromiso
+    </small>
   </a>
 </section>
 <section class="system-z">
@@ -346,5 +330,6 @@ setLang('es');
 
 </body>
 </html>
+
 
 
