--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </p>
 
   <a href="https://wa.me/15024714725" class="primary-btn">
-    📲 Contactar · Te explico si la necesitas
+    📲 Contactar · Invierte 2 minutos antes de $ 
     <small style="display:block;font-size:13px;opacity:.7;margin-top:4px">
       Disponible 24/7 · Sin compromiso
     </small>
@@ -330,6 +330,7 @@ setLang('es');
 
 </body>
 </html>
+
 
 
 
